--- a/resources/config/.env.example
+++ b/resources/config/.env.example
@@ -3,8 +3,9 @@ TODOIST_API_URL=
 TODOIST_API_TOKEN=
 
 ; CLOUD SQL
-DB_IP=
-DB_PORT=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+SQL_INSTANCE_CONNECTION_NAME=
+SQL_IP=
+SQL_PORT=
+SQL_DATABASE=
+SQL_USER=
+SQL_PASSWORD=
