--- a/src/main/resources/config/.env.example
+++ b/src/main/resources/config/.env.example
@@ -1,11 +1,13 @@
 ; TODOIST
 TODOIST_API_URL=
 TODOIST_API_TOKEN=
+TODOIST_API_TEST_TOKEN=
 
 ; CLOUD SQL
 SQL_INSTANCE_CONNECTION_NAME=
 SQL_IP=
 SQL_PORT=
 SQL_DATABASE=
+SQL_TEST_DATABASE=
 SQL_USER=
 SQL_PASSWORD=
